WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273807
Stop asking isPDFOrPostScriptMIMEType() since PDFPlugin does not transcode postscript to PDF anymore
https://bugs.webkit.org/show_bug.cgi?id=273807
Summary
Stop asking isPDFOrPostScriptMIMEType() since PDFPlugin does not transcode po...
Abrar Rahman Protyasha
Reported
2024-05-06 22:49:25 PDT
Callers of MIMETypeRegistry::isPDFOrPostScriptMIMEType() are asking a false premise question since PS does not fold to PDF anymore, as suggested in the title.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-06 22:49:37 PDT
<
rdar://problem/127647542
>
Abrar Rahman Protyasha
Comment 2
2024-05-06 23:50:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28220
EWS
Comment 3
2024-05-07 11:47:55 PDT
Committed
278471@main
(86f6d64476ef): <
https://commits.webkit.org/278471@main
> Reviewed commits have been landed. Closing PR #28220 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug